# mlops_course

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  Snakefile  _quarto.yml  about.qmd  dvc.yaml  env.yml  index.qmd  omega-metric-422818-r9-f902a4eec2f0.json  params.yaml  pyproject.toml
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
clear_ml_infrastucture/: docker-compose.yaml
config/: config.yaml
config/model/: GBT.yaml  RNDF.yaml
config/preprocessing/: knnimputer.yaml  simpleimputer.yaml
data/dvc_data/processed/: .gitignore
data/dvc_data/raw_data/: data.csv.dvc
data/prepared_data/: titanic_prepared_robust.csv  titanic_prepared_standart.csv
data/tree_data/: 2015-street-tree-census-tree-data.csv  socrata_metadata.json
docs/: Snakemake_Hydra_pipelines.qmd  clearml_report.md  dvc.md  fastapi.md  feast.md  featureform.md  kubernetes.md  lakefs.md  mlflow.md  snakemake_hydra.html  streamlit.md
dvc_artifacts/: .gitignore  summary.json
dvc_artifacts/ml_models/: .gitignore
dvc_artifacts/models/: .gitignore
dvc_plots/: index.html
dvc_scripts/: __main__.py  cli.py  evaluate.py  preprocessing.py  split.py  train_model.py  vectorize.py
kubernetes/: html-configmap.yaml  nginx-deployment.yaml
mlflow_infrastructure/: docker-compose.yaml
mlops_course/: dvc_report.ipynb  hypotesis.ipynb  mlflow.ipynb
mlops_course/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
mlops_course/catboost_info/learn/: events.out.tfevents
mlops_course/clearml/: BERT_in_Colab.ipynb  bert_model.ipynb  config.yaml  tf_idf_model.ipynb
mlops_course/mlruns/0/: meta.yaml
mlops_course/streamlit/: tone_app.py
tests/: test_smape.py
workflows/: config.yaml
workflows/models/: gbt_models_robust.pkl  gbt_models_standart.pkl  rndf_models_robust.pkl  rndf_models_standart.pkl
workflows/scripts/: load_data.py  prepare_data.py  train_model.py
